@@ -1,3 +1,8 @@
+1999-10-30  lav
+
+	* keymap.cc: correct error handling in keymap file reading;
+	  flushinp when we get an unknown sequence.
+
 1999-10-06  lav
 
 	* edit.cc: add help line about --config; runtime bool check.
